// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongoSecurityService find users 1`] = `
Array [
  Object {
    "emails": Array [
      Object {
        "email": "bob@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "bob",
      "email": "bob@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "cat@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "cat",
      "email": "cat@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "dan@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "dan",
      "email": "dan@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "david@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "david",
      "email": "david@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "edwin@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "edwin",
      "email": "edwin@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "faye@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "faye",
      "email": "faye@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
]
`;

exports[`MongoSecurityService find users 2`] = `
Array [
  Object {
    "profile": Object {
      "displayName": "dan",
    },
  },
  Object {
    "profile": Object {
      "displayName": "edwin",
    },
  },
]
`;

exports[`MongoSecurityService find users 3`] = `
Array [
  Object {
    "profile": Object {
      "displayName": "edwin",
    },
  },
  Object {
    "profile": Object {
      "displayName": "dan",
    },
  },
]
`;

exports[`MongoSecurityService remove user 1`] = `
Object {
  "docs": Array [],
}
`;

exports[`MongoSecurityService seed users 1`] = `
Array [
  Object {
    "emails": Array [
      Object {
        "email": "admin@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "admin",
      "email": "admin@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user1@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user1",
      "email": "user1@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user10@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user10",
      "email": "user10@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user2@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user2",
      "email": "user2@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user3@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user3",
      "email": "user3@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user4@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user4",
      "email": "user4@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user5@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user5",
      "email": "user5@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user6@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user6",
      "email": "user6@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user7@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user7",
      "email": "user7@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
  Object {
    "emails": Array [
      Object {
        "email": "user8@test.local",
        "verified": true,
      },
    ],
    "profile": Object {
      "displayName": "user8",
      "email": "user8@test.local",
    },
    "services": Object {
      "password": Object {},
    },
  },
]
`;

exports[`MongoSecurityService update profile 1`] = `
Object {
  "emails": Array [
    Object {
      "email": "bob@test.local",
      "verified": true,
    },
  ],
  "profile": Object {
    "displayName": "bob",
    "email": "bob@test.local",
  },
  "services": Object {
    "password": Object {},
  },
}
`;

exports[`MongoSecurityService update profile 2`] = `
Object {
  "emails": Array [
    Object {
      "email": "bob@test.local",
      "verified": true,
    },
  ],
  "profile": Object {
    "displayName": "Bobby",
    "email": "bob@test.local",
  },
  "services": Object {
    "password": Object {},
  },
}
`;

exports[`MongoSecurityService user sign up & login with email/password (via bcrypt) 1`] = `
Object {
  "emails": Array [
    Object {
      "email": "test@test.com",
      "verified": true,
    },
  ],
  "profile": Object {
    "displayName": "test",
    "email": "test@test.com",
  },
  "services": Object {
    "password": Object {},
  },
}
`;

exports[`MongoSecurityService user sign up & login with email/password (via bcrypt) 2`] = `
Object {
  "error": Object {
    "message": "Invalid login attempt",
  },
}
`;

exports[`MongoSecurityService user sign up & login with email/password (via bcrypt) 3`] = `
Object {
  "emails": Array [
    Object {
      "email": "test@test.com",
      "verified": true,
    },
  ],
  "profile": Object {
    "displayName": "test",
    "email": "test@test.com",
  },
  "services": Object {
    "password": Object {},
  },
}
`;

exports[`MongoSecurityService user sign up & login with email/password (via bcrypt) 4`] = `
Object {
  "emails": Array [
    Object {
      "email": "test@test.com",
      "verified": true,
    },
  ],
  "profile": Object {
    "displayName": "test",
    "email": "test@test.com",
  },
  "services": Object {
    "password": Object {},
  },
}
`;

exports[`MongoSecurityService user sign up & login with email/password (via bcrypt) 5`] = `
Object {
  "error": Object {
    "message": "User already exist",
  },
}
`;

exports[`MongoSecurityService user sign up with invalid email 1`] = `
Object {
  "error": Object {
    "message": "Invalid email",
  },
}
`;
